--- a/max.css
+++ b/max.css
@@ -1,12 +1,12 @@
 h1 {
   text-align: center;
-  color: black;
+  color: green;
   margin-top: 10px;
   font-family: "Times"
 }
 
 body {
-  background-color: orange;
+  background-color: gray;
   color: black;
   font-family: "Calibri";
 }
@@ -15,6 +15,7 @@ h2 {
   text-align: center;
   padding-right: 100px;
   padding-left: 100px;
+  background-color: gold;
   font-family: Arial;
   color: #347682;
 }
